...
            android:text="@string/team_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreMatch1"
            style="@style/ScoreMatchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team1" />

        <LinearLayout
            android:id="@+id/gameTeam1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreMatch1">

...
                android:id="@+id/faultTeam1By1"
                style="@style/MinusButtons"
                android:layout_width="@dimen/subButton_size"
                android:layout_height="@dimen/subButton_size" />

            <TextView
                android:id="@+id/scoreGame1"
                style="@style/ScoreGameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/zero" />

            <ImageButton
                android:id="@+id/increaseTeam1By1"
                style="@style/PlusButtons"
                android:layout_width="@dimen/subButton_size"
                android:layout_height="@dimen/subButton_size" />

        </LinearLayout>

...
                android:layout_alignBottom="@id/faultTeam1By5"
                android:layout_toRightOf="@id/faultTeam1By6"
                android:text="7" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/plus_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gameTeam1">

...
                android:layout_marginTop="8dp"
                android:text="4" />

            <Button
                android:id="@+id/increaseTeam1By5"
                style="@style/ScoreButtonsDetails"
                android:layout_alignBottom="@id/increaseTeam1By7"
                android:layout_toLeftOf="@id/increaseTeam1By6"
                android:text="5" />

            <Button
                android:id="@+id/increaseTeam1By6"
                style="@style/ScoreButtonsDetails"
...
            android:text="@string/team_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreMatch2"
            style="@style/ScoreMatchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team2" />

        <LinearLayout
            android:id="@+id/gameTeam2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreMatch2">

...
                android:id="@+id/faultTeam2By1"
                style="@style/MinusButtons"
                android:layout_width="@dimen/subButton_size"
                android:layout_height="@dimen/subButton_size" />

            <TextView
                android:id="@+id/scoreGame2"
                style="@style/ScoreGameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/zero" />

            <ImageButton
                android:id="@+id/increaseTeam2By1"
                style="@style/PlusButtons"
                android:layout_width="@dimen/subButton_size"
                android:layout_height="@dimen/subButton_size" />

        </LinearLayout>

...
                style="@style/ScoreButtonsDetails"
                android:layout_alignBottom="@id/increaseTeam2By2"
                android:layout_alignParentRight="true"
                android:text="4" />

            <Button
                android:id="@+id/increaseTeam2By5"
                style="@style/ScoreButtonsDetails"
                android:layout_alignBottom="@id/increaseTeam2By7"
                android:layout_toLeftOf="@id/increaseTeam2By6"
                android:text="5" />

            <Button
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

            <TextView
                android:id="@+id/remaining_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_points"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toStartOf="@id/raceto"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBaseline_toBaselineOf="@id/remaining_points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/remaining_points" />

        <TextView
            android:id="@+id/balls_scored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Balls scored yet"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remaining_points" />

        <Button
            android:id="@+id/endGame_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/endGame_btn"
            app:layout_constraintEnd_toStartOf="@id/cancel_btn"
...
