<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scores">Scores</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="minus_button">Minus button</string>
    <string name="team_1">Team 1</string>
    <string name="plus_button">Plus button</string>

    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="endGame_btn">End Game</string>
    <string name="zero">0</string>
    <string name="team_2">Team 2</string>
    <string name="cancel_last_btn">Cancel</string>
    <string name="menu_select_games">Select Game</string>
    <string name="endMatch_btn">End Match</string>
    <string name="remaining_points">Remaining points : %1$d</string>
    <string name="race_to">Race To: %1$d</string>
    <string name="winning_match">Congratulation to %1$s: You won this match</string>
    <string name="replay_question">Do you want to replay with same Parameters?</string>

    //for billard spinner
    <string-array name="billard_array">
        <item>Snooker</item>
        <item>8-Ball</item>
        <item>9-Ball</item>
    </string-array>
</resources>
