...
        android:layout_toRightOf="@id/raceto_view"
        android:text="3"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/raceto_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_play_btn" />
...
